raw/AISLAM AZ ZAHARA NIQUITA 6435 245150207111057/2024-11-14-10-00-50.ceg/compilation.txt
NT.java:69: error: class, interface, enum, or record expected
    }
    ^
1 error
Not compiled
